--- a/.openzeppelin/project.json
+++ b/.openzeppelin/project.json
@@ -1,6 +1,8 @@
 {
   "manifestVersion": "2.2",
-  "contracts": {},
+  "contracts": {
+    "AaveRestake": "AaveRestake"
+  },
   "dependencies": {
     "@openzeppelin/contracts-ethereum-package": "^3.0.0"
   },
@@ -8,11 +10,18 @@
   "version": "1.0.0",
   "compiler": {
     "compilerSettings": {
-      "optimizer": {}
+      "optimizer": {
+        "enabled": false,
+        "runs": "200"
+      }
     },
     "typechain": {
       "enabled": false
-    }
+    },
+    "manager": "openzeppelin",
+    "solcVersion": "0.6.12",
+    "artifactsDir": "build/contracts",
+    "contractsDir": "contracts"
   },
   "telemetryOptIn": false
 }
