--- a/package.json
+++ b/package.json
@@ -20,5 +20,9 @@
     "@openzeppelin/cli": "^2.8.2",
     "@openzeppelin/contracts-ethereum-package": "^3.0.0",
     "@truffle/hdwallet-provider": "^1.1.1"
+  },
+  "devDependencies": {
+    "truffle": "^5.1.50",
+    "truffle-flattener": "^1.5.0"
   }
 }
