First iteration of contract functional. Shares NOT ERC-20 compliant yet.

--- a/.openzeppelin/project.json
+++ b/.openzeppelin/project.json
@@ -1,7 +1,7 @@
 {
   "manifestVersion": "2.2",
   "contracts": {
-    "AaveRestake": "AaveRestake"
+    "AaveRestaker": "AaveRestaker"
   },
   "dependencies": {
     "@openzeppelin/contracts-ethereum-package": "^3.0.0"
